--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="Google Home Page" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width,height=device-height, initial-scale=1">
         <title>Google</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/reset.css">
